load more button ui and gaps issue fixed

--- a/gsusa/app/src/main/content/jcr_root/apps/gsusa/components/troop-listing/clientlibs/css/troop-listing.css
+++ b/gsusa/app/src/main/content/jcr_root/apps/gsusa/components/troop-listing/clientlibs/css/troop-listing.css
@@ -5,3 +5,15 @@
     float: right;
 }
 
+.row.show-more.button {
+    text-align: center;
+    display: block;
+    background-color: #00AE58;
+    width: fit-content;
+    margin: auto;
+}
+.show-more a#showMore {
+	color: #FFFFFF
+}
+
+
